Aspect ratio overflow fix

--- a/text-media.scss
+++ b/text-media.scss
@@ -8,6 +8,8 @@ $breakpoint_tablet: 900px;
   width: calc(1px * var(--width, 10000));
   max-width: 100%;
   --ratio: initial; // Don't inherit ratio from ancestors
+  --width: initial;
+  --height: initial;
   aspect-ratio: var(--ratio, calc(var(--width)/ var(--height)));
 
   > img {
